WebAdds/force-app/main/default/objects/objects/Show_User__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Chealsea</fullName>
            </value>
            <value>
                <fullName>New 1</fullName>
            </value>
            <value>
                <fullName>Los1</fullName>
            </value>
            <value>
                <fullName>Torronto</fullName>
            </value>
            <value>
                <fullName>montrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>