WebAdds/force-app/main/default/objects/objects/Show_User__c/fields/D_O_B__c.field-meta.xml
<CustomField>
    <fullName>D_O_B__c</fullName>
    <label>D.O.B</label>
    <required>true</required>
    <type>Date</type>
</CustomField>