WebAdds/force-app/main/default/objects/objects/Show_User__c/fields/Secret_Answear__c.field-meta.xml
<CustomField>
    <fullName>Secret_Answear__c</fullName>
    <label>Secret Answear</label>
    <length>40</length>
    <type>Text</type>
</CustomField>