WebAdds/force-app/main/default/objects/objects/Show_User__c/fields/Secret_Queston__c.field-meta.xml
<CustomField>
    <fullName>Secret_Queston__c</fullName>
    <label>Secret Queston</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What is your place of birth</fullName>
            </value>
            <value>
                <fullName>What is your nick name</fullName>
            </value>
            <value>
                <fullName>which city you born</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>