WebAdds/force-app/main/default/objects/objects/Show_User__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Manchaster</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Los Angles</fullName>
            </value>
            <value>
                <fullName>Can State1</fullName>
            </value>
            <value>
                <fullName>Can State 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>