WebAdds/force-app/main/default/objects/objects/Show_User__c/validationRules/Age_Should_Be_Above_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Should_Be_Above_18</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()  - 6570 &lt;  D_O_B__c</errorConditionFormula>
    <errorMessage>Age Should Be Above 18</errorMessage>
</ValidationRule>