WebAdds/force-app/main/default/objects/objects/Show_User__c/validationRules/Confirm_Password_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_Password_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Confirm_Password__c = Password__c</errorConditionFormula>
    <errorDisplayField>Confirm_Password__c</errorDisplayField>
    <errorMessage>Password Does Not Match!</errorMessage>
</ValidationRule>