WebAdds/force-app/main/default/objects/objects/Show_User__c/validationRules/Password_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Password_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>( Password__c   &lt;&gt;  Confirm_Password__c   )</errorConditionFormula>
    <errorMessage>Password didn&apos;t match</errorMessage>
</ValidationRule>